// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Mode B end-to-end demos > 1ère spécialité polynomial differentiation — produces lycee steps 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 7,
    "rule": "sum-with-constant",
    "schoolLevel": "lycee",
    "subSteps": [
      {
        "hasExplanation": true,
        "hasExpressionLatex": true,
        "id": 6,
        "rule": "sum",
        "schoolLevel": "lycee",
        "subSteps": [
          {
            "hasExplanation": true,
            "hasExpressionLatex": true,
            "id": 4,
            "rule": "sum",
            "schoolLevel": "lycee",
            "subSteps": [
              {
                "hasExplanation": true,
                "hasExpressionLatex": true,
                "id": 1,
                "rule": "power-natural",
                "schoolLevel": "lycee",
                "title": "Règle de la puissance (3)",
              },
              {
                "hasExplanation": true,
                "hasExpressionLatex": true,
                "id": 3,
                "rule": "linear-coefficient",
                "schoolLevel": "lycee",
                "subSteps": [
                  {
                    "hasExplanation": true,
                    "hasExpressionLatex": true,
                    "id": 2,
                    "rule": "power-natural",
                    "schoolLevel": "lycee",
                    "title": "Règle de la puissance (2)",
                  },
                ],
                "title": "On sort la constante 2",
              },
            ],
            "title": "On dérive chaque terme",
          },
          {
            "hasExplanation": true,
            "hasExpressionLatex": true,
            "id": 5,
            "rule": "linear-coefficient",
            "schoolLevel": "lycee",
            "title": "On sort la constante 5",
          },
        ],
        "title": "On dérive chaque terme",
      },
    ],
    "title": "La constante a une dérivée nulle",
  },
]
`;

exports[`Mode B end-to-end demos > 1ère spécialité quadratic inequality with a < 0 — produces lycee steps 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "lycee",
    "title": "Inéquation du second degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "identify-coefficients",
    "schoolLevel": "lycee",
    "title": "On identifie les coefficients a, b et c",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "compute-discriminant",
    "schoolLevel": "lycee",
    "title": "On calcule le discriminant Δ = b² − 4ac",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 4,
    "rule": "discriminant-positive",
    "schoolLevel": "lycee",
    "title": "Δ > 0 : le polynôme admet deux racines distinctes",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 5,
    "rule": "apply-quadratic-formula",
    "schoolLevel": "lycee",
    "title": "On applique la formule : x = (−b ± √Δ) / (2a)",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 6,
    "rule": "simplify-solutions",
    "schoolLevel": "lycee",
    "title": "On simplifie les racines",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 7,
    "rule": "quadratic-sign-table",
    "schoolLevel": "lycee",
    "title": "On dresse le tableau de signes",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 8,
    "rule": "inequality-conclude-quadratic",
    "schoolLevel": "lycee",
    "title": "Solution : S = ]2 ; 3[",
  },
]
`;

exports[`Mode B end-to-end demos > 1ère spécialité quadratic inequality — produces lycee steps with sign table + conclusion 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "lycee",
    "title": "Inéquation du second degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "identify-coefficients",
    "schoolLevel": "lycee",
    "title": "On identifie les coefficients a, b et c",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "compute-discriminant",
    "schoolLevel": "lycee",
    "title": "On calcule le discriminant Δ = b² − 4ac",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 4,
    "rule": "discriminant-positive",
    "schoolLevel": "lycee",
    "title": "Δ > 0 : le polynôme admet deux racines distinctes",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 5,
    "rule": "apply-quadratic-formula",
    "schoolLevel": "lycee",
    "title": "On applique la formule : x = (−b ± √Δ) / (2a)",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 6,
    "rule": "simplify-solutions",
    "schoolLevel": "lycee",
    "title": "On simplifie les racines",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 7,
    "rule": "quadratic-sign-table",
    "schoolLevel": "lycee",
    "title": "On dresse le tableau de signes",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 8,
    "rule": "inequality-conclude-quadratic",
    "schoolLevel": "lycee",
    "title": "Solution : S = ]2 ; 3[",
  },
]
`;

exports[`Mode B end-to-end demos > 4e linear equation — produces college steps 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "college",
    "title": "Équation du premier degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "subtract-both-sides",
    "schoolLevel": "college",
    "title": "On soustrait 5 aux deux membres",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "divide-both-sides",
    "schoolLevel": "college",
    "title": "On divise les deux membres par 3",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 4,
    "rule": "read-solution",
    "schoolLevel": "college",
    "title": "Solution : x = 3",
  },
]
`;

exports[`Mode B end-to-end demos > 4e linear inequality with flip — produces college steps with flipOperator note 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "college",
    "title": "Inéquation du premier degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "divide-both-sides",
    "schoolLevel": "college",
    "title": "On divise les deux membres par -2 (changement de sens car -2 est négatif)",
  },
]
`;

exports[`Mode B end-to-end demos > 4e linear inequality with x on both sides — produces college steps 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "college",
    "title": "Inéquation du premier degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "subtract-both-sides",
    "schoolLevel": "college",
    "title": "On soustrait x aux deux membres",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "subtract-both-sides",
    "schoolLevel": "college",
    "title": "On soustrait 1 aux deux membres",
  },
]
`;

exports[`Mode B end-to-end demos > CM2 arithmetic — produces primaire steps with grouping 1`] = `
[
  {
    "hasExplanation": false,
    "hasExpressionLatex": true,
    "id": 0,
    "rule": "evaluate-binary-mul",
    "schoolLevel": "primaire",
    "title": "On multiplie 3 par 4",
  },
  {
    "hasExplanation": false,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "evaluate-binary-add",
    "schoolLevel": "primaire",
    "title": "On additionne 2 et 12",
  },
  {
    "hasExplanation": false,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "evaluate-binary-mul",
    "schoolLevel": "primaire",
    "title": "On multiplie 5 par 6",
  },
  {
    "hasExplanation": false,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "evaluate-binary-add",
    "schoolLevel": "primaire",
    "title": "On additionne 14 et 30",
  },
]
`;

exports[`Mode B end-to-end demos > Terminale spécialité composition differentiation — produces sin + linear-coefficient sub-step 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "sin",
    "schoolLevel": "lycee",
    "subSteps": [
      {
        "hasExplanation": true,
        "hasExpressionLatex": true,
        "id": 1,
        "rule": "linear-coefficient",
        "schoolLevel": "lycee",
        "title": "On sort la constante 3",
      },
    ],
    "title": "Dérivée de sinus",
  },
]
`;

exports[`Mode B end-to-end demos > Tle spécialité quadratic equation — produces lycee steps with discriminant 1`] = `
[
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 1,
    "rule": "identify-equation",
    "schoolLevel": "lycee",
    "title": "Équation du second degré",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 2,
    "rule": "identify-coefficients",
    "schoolLevel": "lycee",
    "title": "On identifie les coefficients a, b et c",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 3,
    "rule": "compute-discriminant",
    "schoolLevel": "lycee",
    "title": "On calcule le discriminant Δ = b² − 4ac",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 4,
    "rule": "discriminant-positive",
    "schoolLevel": "lycee",
    "title": "Δ > 0 : deux solutions distinctes",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 5,
    "rule": "apply-quadratic-formula",
    "schoolLevel": "lycee",
    "title": "On applique la formule : x = (−b ± √Δ) / (2a)",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 6,
    "rule": "simplify-solutions",
    "schoolLevel": "lycee",
    "title": "On simplifie les solutions",
  },
  {
    "hasExplanation": true,
    "hasExpressionLatex": true,
    "id": 7,
    "rule": "read-solutions",
    "schoolLevel": "lycee",
    "title": "Solutions",
  },
]
`;
